--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "Giftbox - Never get another useless gift",
     "main": "assets/js/app.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "webpack",
-        "start": "webpack-dev-server"
+      "start": "react-scripts start",
+      "build": "react-scripts build",
+      "eject": "react-scripts eject"
     },
     "repository": {
         "type": "git",
@@ -22,11 +22,14 @@
         "url": "https://github.com/jumpalottahigh/giftbox/issues"
     },
     "homepage": "https://github.com/jumpalottahigh/giftbox#readme",
+    "devDependencies": {
+      "react-scripts": "0.2.1"
+    },
     "dependencies": {
-        "babel-core": "^6.10.4",
-        "babel-loader": "^6.2.4",
-        "babel-preset-es2015": "^6.9.0",
-        "babel-preset-react": "^6.5.0",
-        "webpack": "^1.13.1"
+      "react": "^15.2.1",
+      "react-dom": "^15.2.1"
+    },
+    "eslintConfig": {
+      "extends": "./node_modules/react-scripts/config/eslint.js"
     }
 }
