--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "firebase": "^3.6.3",
     "moment": "^2.17.1",
-    "vue": "^2.1.0"
+    "vue": "^2.1.0",
+    "vuefire": "^1.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
