--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "firebase": "^3.6.3",
     "moment": "^2.17.1",
+    "toastr": "^2.1.2",
     "vue": "^2.1.0",
     "vuefire": "^1.3.0"
   },
