--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "firebase": "^3.6.6",
+    "jquery": "^3.1.1",
     "moment": "^2.17.1",
     "toastr": "^2.1.2",
     "vue": "^2.1.10",
